--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -4,19 +4,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Circle?>
 
 <fx:root alignment="TOP_RIGHT"
-         maxHeight="1.7976931348623157E308"
          maxWidth="1.7976931348623157E308"
-         prefWidth="400.0"
+         spacing="10.0"
          type="javafx.scene.layout.HBox"
          xmlns="http://javafx.com/javafx/17"
          xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Label fx:id="dialog" text="Label" wrapText="true" minHeight="-Infinity"/>
-    <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
+    <Label fx:id="dialog"
+           text="Label"
+           wrapText="true"
+           minHeight="-Infinity"
+           maxWidth="260.0"
+           style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 12; -fx-font-size: 13px; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 2);"/>
+    <ImageView fx:id="displayPicture"
+               fitHeight="50.0"
+               fitWidth="50.0"
+               pickOnBounds="true"
+               preserveRatio="true">
+      <clip>
+        <Circle centerX="25.0" centerY="25.0" radius="25.0"/>
+      </clip>
+      <HBox.margin>
+        <Insets top="5.0"/>
+      </HBox.margin>
+    </ImageView>
   </children>
   <padding>
-    <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+    <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
   </padding>
 </fx:root>
